# opentelemetry-rust

./: Cargo.toml  Makefile  README.md  docker-compose.yml  prometheus.yaml
add/: Cargo.toml
add/src/: main.rs
services/: Cargo.toml
services/src/: client.rs  lib.rs  server.rs  telemetry.rs
src/: main.rs  telemetry.rs
sub/: Cargo.toml
sub/src/: main.rs
