[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-bunyan-formatter = { workspace = true }

opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread","trace"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio-current-thread", "collector_client", "rt-tokio", "isahc_collector_client"] }
opentelemetry_sdk = { version = "0.18.0", features = ["metrics", "rt-tokio-current-thread", "trace"] }
opentelemetry_api = "0.19.0"
opentelemetry-prometheus = { version = "0.11.0", features = ["prometheus-encoding"] }

actix-web = { workspace = true }
actix-web-opentelemetry = { workspace = true }
actix-service = { workspace = true }
actix-http = { workspace = true }
prometheus = { workspace = true }
actix-web-prom = { workspace = true }

systemstat = "0.2.3"
futures-util = "0.3.28"
tokio = { version = "1", features = ["full"] }
awc = "3.2.0"
thiserror = "1.0.30"
